@@ -58,3 +58,6 @@ LibraryRefContainer.Libraries=Libraries
 IncludeRefContainer.Includes=Includes
 
 CView.statusLine = {0} items selected
+
+CopyToClipboardProblemDialog_title=Problem Copying to Clipboard
+CopyToClipboardProblemDialog_message=There was a problem when accessing the system clipboard. Retry?
